<resources>
    <string name="facebook_application_id" translatable="false">2258951821100560</string>
    <string name="facebook_login_protocol_schema" translatable="false">fb2258951821100560</string>
    <string name="title_activity_maps">Explorer</string>

    <string name="pet_name">Name</string>

    <string name="email">E-mail</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_password">Password</string>

    <string name="btn_login">LOGIN</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="vacine">New Vaccine</string>

    <string name="pet_food" translatable="false">https://www.youtube.com/watch?v=vuej1XI2lWQ</string>
    <string name="vaccine_name">Vaccine name</string>
    <string name="create_vaccine">Create Vaccine</string>
    <string name="create_application">Create application</string>
    <string name="vaccine_for_pet">New vaccine for %1$s</string>
    <string name="display_date" translatable="false">%1$s/%2$s/%3$s</string>
    <string name="application_for_vaccine">New application for vaccine %1$s</string>
    <string name="sex">Sex</string>
    <string name="breed">Breed</string>
    <string name="imagen">Image</string>
    <string name="new_vaccine">New Vaccine</string>
    <string name="vaccination_record">Vaccination record</string>
    <string name="new_application">New vaccine application</string>
    <string name="species">Species</string>
    <string name="msg_your_pets_will_show_here">Your pets will show here</string>
    <string name="pet_description">%1$s is a beautiful %2$s specimen of a %3$s %4$s.</string>
    <string name="select_date">Select Date</string>
    <string name="new_pet">New Pet</string>
    <string name="app_name" translatable="false">PetCare</string>
    <string name="create_pet">Create pet</string>
    <string name="map">Map</string>
    <string name="articles">Articles</string>
    <string name="home">Home</string>

</resources>
