<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/sound_cloud_background"
                tools:context="com.cuidadoanimal.petcare.gui.fragments.Login">


    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="-3dp"
            android:layout_marginBottom="@dimen/_230sdp">


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_50sdp"
                android:layout_marginEnd="@dimen/_50sdp"
                android:orientation="vertical">

            <AutoCompleteTextView
                    android:id="@+id/PetName"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:drawablePadding="10dp"
                    android:hint="@string/pet_name"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:textColor="@color/colorAccent"
                    android:textColorHint="@color/place_autocomplete_search_hint"
                    android:textSize="@dimen/_15sdp"/>

            <AutoCompleteTextView
                    android:id="@+id/PetBreed"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:drawablePadding="@dimen/_10sdp"
                    android:hint="Breed"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:textColor="@color/colorAccent"
                    android:textColorHint="@color/place_autocomplete_search_hint"
                    android:textSize="@dimen/_15sdp"/>

            <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">


                <RadioGroup
                        android:id="@+id/rg_pet_sex"
                        android:layout_width="wrap_content"
                        android:checkedButton="@id/rb_sex_female"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                    <RadioButton
                            android:id="@+id/rb_sex_female"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/female"/>

                    <RadioButton
                            android:id="@+id/rb_sex_male"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/male"/>
                </RadioGroup>
            </RadioGroup>

            <Button
                    android:id="@+id/btncreatePet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="#85c1e9"
                    android:text="@string/create"
                    android:textColor="@android:color/white"/>


        </LinearLayout>


    </ScrollView>

</RelativeLayout>